# djanet

./: pyproject.toml
djanet/config/: asgi.py  settings.py  urls.py  wsgi.py
djanet/src/: routers.py
djanet/src/profiles/: admin.py  models.py  serializers.py  urls.py  views.py
djanet/src/profiles/migrations/: 0001_initial.py
